--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <meta name="description" content="Experienced web developer with skills in HTML, CSS, JavaScript, React, and backend technologies. View projects, tech stack, and GitHub contributions.">
+    <title>Hamed Moradi | Web Developer</title>
   </head>
   <body>
     <div id="root" class="font-project text-white"></div>
